update styles from blog page detail, fix cover and layer

--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -17,7 +17,7 @@
     list-style: none;
     padding-left: 110px;
     position: relative;
-    top: 0px;
+    top: 0;
 
     :global .slick-active {
       button {
@@ -40,36 +40,38 @@
       }
     }
   }
+
   .leo-slider {
     padding-top: 170px;
-    blockquote{
-      max-width: 460px;
+
+    blockquote {
+      color: $color-4;
       font-family: $font-family-1;
       font-size: $font-size-x-normal;
-      font-weight: $font-weight-normal;
       font-style: italic;
+      font-weight: $font-weight-normal;
       letter-spacing: -.1px;
-      color: $color-4;
+      max-width: 460px;
       padding-left: 110px;
     }
 
     .author-quote {
-      max-width: 460px;
+      color: $color-4;
       font-family: $font-family-1;
       font-size: $font-size-normal;
       font-weight: $font-weight-normal;
       letter-spacing: -.1px;
-      color: $color-4;
-      margin-top: 10px;
       margin-bottom: 0;
+      margin-top: 10px;
+      max-width: 460px;
 
       &::after {
+        background-color: $color-6;
         content: '';
         display: block;
-        margin-top: 20px;
         height: 5px;
-        background-color: $color-6;
         margin-bottom: 20px;
+        margin-top: 20px;
         width: 170px;
       }
     }
@@ -111,6 +113,30 @@
       margin-top: 18px;
       width: 210px;
     }
+  }
+
+  .cover-sub-title  {
+    font-family: $font-family-1;
+    font-size: $font-size-medium;
+    font-weight: $font-weight-bold;
+    line-height: 1.37;
+    padding-top: 75px;
+    text-transform: uppercase;
+
+    a {
+      color: $color-4;
+      text-decoration: none;
+    }
+  }
+
+  .cover-sub-subtitle {
+    color: $color-4;
+    font-size: $font-size-huge;
+    font-weight: $font-weight-bold;
+    letter-spacing: -1.5px;
+    line-height: 1.12;
+    margin-bottom: 50px;
+    max-width: 1000px;
   }
 
   p {
