--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -36,6 +36,7 @@ $color-9: #4a4a4a;
 $color-10: #e8f4f9;
 $color-11: #0d1a34;
 $color-12: #000;
+$color-13: #2b4f93;
 
 // Breakpoints
 $breakpoint-mobile-small: 320px;
