--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -13,34 +13,31 @@
     width: 100%;
   }
 
-  .dots-cover {
-    list-style: none;
+  h1 {
+    color: $color-4;
+    font-size: $font-size-huge;
+    font-weight: $font-weight-bold;
+    letter-spacing: -1.5px;
+    line-height: .85;
+    margin-bottom: 0;
+    margin-top: 0;
+    max-width: 1280px;
     padding-left: 110px;
-    position: relative;
-    top: 0;
+    padding-right: 110px;
+    padding-top: 170px;
 
-    :global .slick-active {
-      button {
-        background-color: $color-3;
-      }
-    }
-
-    li {
-      display: inline-block;
-
-      button {
-        background: $color-4;
-        border: 0;
-        font-size: 0;
-        height: 14px;
-        margin-right: 15px;
-        outline: 0;
-        transform: rotate(45deg);
-        width: 14px;
-      }
+    &::after {
+      background-color: $color-6;
+      content: '';
+      display: block;
+      height: 5px;
+      margin-bottom: 10px;
+      margin-top: 20px;
+      width: 170px;
     }
   }
 
+  //Cover different with quote and different kind of text
   .leo-slider {
     padding-top: 170px;
 
@@ -77,50 +74,21 @@
     }
   }
 
-  h1 {
-    color: $color-4;
-    font-family: $font-family-1;
-    font-size: $font-size-huge;
-    font-weight: $font-weight-bold;
-    letter-spacing: -1.5px;
-    line-height: .85;
-    margin-bottom: 0;
-    margin-top: 0;
-    max-width: 1280px;
-    padding-left: 110px;
-    padding-right: 110px;
-    padding-top: 170px;
-
-    &::after {
-      background-color: $color-6;
-      content: '';
-      display: block;
-      height: 5px;
-      margin-bottom: 10px;
-      margin-top: 18px;
-      width: 174px;
-    }
-  }
-
+  //Style cover sub-pages
   .cover-main-title {
-
-    &::after {
-      background-color: $color-6;
-      content: '';
-      display: block;
-      height: 5px;
-      margin-bottom: 20px;
-      margin-top: 18px;
-      width: 210px;
-    }
+    padding-top: 50px;
   }
 
+  .cover-main-subtitle {
+    margin-bottom: 20px;
+  }
+
+  //Style blog post detail
   .cover-sub-title  {
-    font-family: $font-family-1;
     font-size: $font-size-medium;
     font-weight: $font-weight-bold;
     line-height: 1.37;
-    padding-top: 75px;
+    padding-top: 50px;
     text-transform: uppercase;
 
     a {
@@ -135,15 +103,12 @@
     font-weight: $font-weight-bold;
     letter-spacing: -1.5px;
     line-height: 1.12;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     max-width: 1000px;
   }
 
   p {
     color: $color-4;
-    font-family: $font-family-1;
-    font-size: $font-size-medium;
-    font-weight: $font-weight-normal;
     letter-spacing: -.1px;
     margin-bottom: 170px;
     max-width: 668px;
@@ -173,12 +138,6 @@
       }
     }
 
-    .selected-box {
-      fill: $color-3;
-      stroke: $color-3;
-      stroke-width: 3;
-    }
-
     div {
       &:last-child {
         z-index: 1;
@@ -193,11 +152,38 @@
 
   }
 
-  .text-ldf-footer {
-    font-size: $font-size-small;
-    font-weight: $font-weight-normal;
-    letter-spacing: -.1px;
-    margin-bottom: 0;
-    padding-left: 0;
+  //dots control de slider at home
+  .dots-cover {
+    list-style: none;
+    padding-left: 110px;
+    position: relative;
+    top: 0;
+
+    :global .slick-active {
+      button {
+        background-color: $color-3;
+      }
+    }
+
+    li {
+      display: inline-block;
+
+      button {
+        background: $color-4;
+        border: 0;
+        font-size: 0;
+        height: 14px;
+        margin-right: 15px;
+        outline: 0;
+        transform: rotate(45deg);
+        width: 14px;
+      }
+    }
+  }
+
+  .selected-box {
+    fill: $color-3;
+    stroke: $color-3;
+    stroke-width: 3;
   }
 }
