change style cover pages and add new image on menu

--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -46,9 +46,20 @@
         margin-top: 20px;
         width: 170px;
       }
+
+      &::after {
+        background-color: $color-6;
+        content: '';
+        display: block;
+        height: 5px;
+        margin-bottom: 10px;
+        margin-top: 20px;
+        width: 170px;
+      }
     }
   }
 
+  //Cover different with quote and different kind of text
   .leo-slider {
     padding-top: 170px;
 
@@ -198,11 +209,38 @@
     stroke-width: 3;
   }
 
-  .text-ldf-footer {
-    font-size: $font-size-small;
-    font-weight: $font-weight-normal;
-    letter-spacing: -.1px;
-    margin-bottom: 0;
-    padding-left: 0;
+  //dots control de slider at home
+  .dots-cover {
+    list-style: none;
+    padding-left: 110px;
+    position: relative;
+    top: 0;
+
+    :global .slick-active {
+      button {
+        background-color: $color-3;
+      }
+    }
+
+    li {
+      display: inline-block;
+
+      button {
+        background: $color-4;
+        border: 0;
+        font-size: 0;
+        height: 14px;
+        margin-right: 15px;
+        outline: 0;
+        transform: rotate(45deg);
+        width: 14px;
+      }
+    }
+  }
+
+  .selected-box {
+    fill: $color-3;
+    stroke: $color-3;
+    stroke-width: 3;
   }
 }
