File name refactoring, colors+screen removal in favor of settings

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -21,6 +21,7 @@ $font-size-huge: 100px;
 // Font weights
 $font-weight-light: 300;
 $font-weight-normal: 400;
+$font-weight-semi: 600;
 $font-weight-bold: 700;
 
 // Colors
