--- a/app/styles/components/c-control_panel.scss
+++ b/app/styles/components/c-control_panel.scss
@@ -65,9 +65,8 @@
     font-size: $font-size-x-small;
     font-weight: $font-weight-normal;
     line-height: 2;
+    padding: 0 30px 30px 30px;
     text-transform: uppercase;
-    padding-bottom: 30px;
-    padding-left: 30px;
   }
   input[type="checkbox"] {
     background: linear-gradient(to bottom, hsla(0, 0%, 0%, .1), hsla(0, 0%, 100%, .1)), linear-gradient(to right, #c7c7c7 50%, currentColor 50%) 0 0, 5px 0;
