--- a/app/styles/components/c-footer.scss
+++ b/app/styles/components/c-footer.scss
@@ -1,12 +1,82 @@
 @import '../settings';
 
 footer {
-  font-family: $font-family-1;
   background-color: $color-7;
-  padding-top: 56px;
-  padding-left: 170px;
-  padding-right: 170px;
-  .project_name_footer {
-    background-color: $color-17;
+
+  //Section Founding Logos on footer
+  .logos-footer {
+    border-bottom: 1px solid rgba($color-12, .2);
+    display: flex;
+    justify-content: space-between;
+    padding: 55px 110px 54px;
+
+    .partner-footer,
+    .sponsor-footer {
+      span {
+        color: $color-16;
+        display: block;
+        margin-bottom: 35px;
+      }
+
+      img {
+        display: inline-block;
+        margin-left: 75px;
+        width: 130px;
+      }
+
+      .first-partner {
+        margin-left: 0;
+      }
+    }
+
+    .sponsor-footer {
+      padding-top: 54px;
+    }
+  }
+
+  //Section Navigation footer
+  .nav-footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px 110px;
+
+    ul {
+      list-style: none;
+      margin-after: 0;
+      margin-before: 0;
+      padding-start: 0;
+
+      li {
+        color: $color-4;
+        line-height: 2.27;
+        text-transform: uppercase;
+
+        a {
+          color: $color-4;
+          text-decoration: none;
+        }
+      }
+    }
+
+    .subscribe-button {
+      background-color: $color-6;
+      color: $color-4;
+      font-size: $font-size-x-small;
+      padding: 10px 15px;
+      text-decoration: none;
+    }
+  }
+
+  //Section Brand footer
+  .second-footer {
+    align-items: center;
+    background-color: $color-12;
+    display: flex;
+    height: 40px;
+    justify-content: center;
+
+    img {
+      width: 100px;
+    }
   }
 }
