--- a/app/styles/components/c-second-footer.scss
+++ b/app/styles/components/c-second-footer.scss
@@ -1,11 +1,12 @@
 @import '../settings';
 
-.c_second_footer {
-  height: 42px;
+.c-second-footer {
+  align-items: center;
   background-color: $color-12;
   display: flex;
+  height: 40px;
   justify-content: center;
-  align-items: center;
+
   img {
     width: 85px;
   }
