accordion implementation and styles

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -5,6 +5,11 @@
 $font-family-1: 'Roboto', sans-serif;
 $font-family-2: 'Roboto Slab', serif;
 
+// Layout
+$max-width-wrap: 1060px;
+$wrap-xl: 112px;
+
+
 // Font sizes
 $font-size-tiny: 10px;
 $font-size-x-small: 12px;
@@ -37,6 +42,7 @@ $color-10: #e8f4f9;
 $color-11: #0d1a34;
 $color-12: #000;
 $color-13: #2b4f93;
+$color-19: #174084;
 
 // Colors to review
 $color-14: #2d3a57;
