--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -33,3 +33,10 @@ body {
 body > div > div > div { // FIXME: add .full-height-container to each page root div
   height: 100%;
 }
+
+.wrap {
+  margin: 0 auto;
+  max-width: $max-width-wrap;
+  padding: 0 $wrap-xl;
+  width: 100%;
+}
