Styles for contact form

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -25,6 +25,7 @@ $font-size-x-medium: 25px;
 $font-size-big: 30px;
 $font-size-x-big: 34px;
 $font-size-xx-big: 40px;
+$font-size-xxx-big: 70px;
 $font-size-huge: 100px;
 
 // Font weights
