--- a/app/styles/components/shared/c-header.scss
+++ b/app/styles/components/shared/c-header.scss
@@ -8,6 +8,8 @@
   height: 95px;
   justify-content: space-between;
   padding: 0 30px;
+  position: relative;
+  z-index: 2;
 
   @media #{$mq-tablet} {
     box-shadow: none;
