--- a/app/styles/components/shared/c-content-accordion.scss
+++ b/app/styles/components/shared/c-content-accordion.scss
@@ -3,56 +3,40 @@
 .c-content-accordion {
   padding: 100px 0 95px;
 
-
   > .accordion-item {
-    display: block;
-    padding-bottom: 60px;
+    padding: 30px 0;
     position: relative;
 
-    &:last-child {
-      padding-bottom: 0;
+    & + .accordion-item {
+      border-top: 2px solid $color-10;
     }
   }
 
-  :global .react-sanfona-item-expanded {
-    border-bottom: 2px solid $color-10;
-    border-top: 2px solid $color-10;
-    margin-bottom: 60px;
-    padding-top: 60px;
-
-    &:last-child {
-      padding-bottom: 60px;
-    }
-  }
-
-  .accordion-item .item-title {
+  > .accordion-item .item-title {
     color: $color-19;
     font-size: 19px;
+    font-weight: $font-weight-bold;
     margin-bottom: 20px;
     position: relative;
     width: 100%;
   }
 
-  .accordion-item .item-answer {
-    color: $color-9;
-    font-size: $font-size-normal;
-    line-height: 1.6;
+  > .accordion-item .item-answer {
     margin-top: 20px;
-
-    > p + p {
-      margin-top: 15px;
-    }
 
     ul {
       margin-top: 15px;
       padding-left: 30px;
     }
 
+    // we should move this to _base.scss
+    // but not sure 100%
     a {
       color: $color-12;
       font-weight: $font-weight-bold;
       position: relative;
       text-decoration: none;
+
 
       &::after {
         background-color: $color-6;
