--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -379,14 +379,28 @@ h1 {
   width: 100%;
 }
 
+section.ty {
+  display: flex;
+}
 
 .ty h1 {
   margin-bottom: 30px;
+  text-align: center;
 }
 
 .ty p {
   font-size: 14px;
   line-height: 1.5;
+}
+
+@media screen and (min-width: 768px) {
+  .ty p {
+    font-size: 25px;
+    line-height: 42px;
+    margin: 0 auto;
+    max-width: 850px;
+    width: 80%;
+  }
 }
 
 /*FORM STYLES*/
@@ -567,6 +581,8 @@ hr {
 }
 
 .reg-form {
+  margin: 0 auto;
+  max-width: 480px;
   width: 100%;
 }
 
@@ -724,6 +740,16 @@ hr {
   line-height: 1.5;
 }
 
+@media screen and (min-width: 768px) {
+  .pwd p {
+    font-size: 25px;
+    line-height: 42px;
+    margin: 0 auto;
+    max-width: 850px;
+    width: 80%;
+  }
+}
+
 .pwd p:first-of-type {
   margin-top: 20px;
 }
@@ -862,7 +888,7 @@ hr {
 
 @media screen and (min-width: 768px) {
   form {
-    max-width: 450px;
+    max-width: 480px;
     margin: 0 auto;
   }
 
