fix style and components errors

--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -206,10 +206,8 @@
       }
 
       &:last-child {
-
         &::after {
-          content: '';
-          display: none;
+          content: none;
         }
       }
     }
