--- a/app/styles/components/c-button-arrow.scss
+++ b/app/styles/components/c-button-arrow.scss
@@ -12,6 +12,8 @@
   justify-content: center;
   letter-spacing: -.1px;
   line-height: .4;
+  max-width: 180px;
+  min-height: 50px;
   text-decoration: none;
   width: 210px;
 
