--- a/app/styles/components/c-button.scss
+++ b/app/styles/components/c-button.scss
@@ -10,9 +10,10 @@
   justify-content: center;
   letter-spacing: -.1px;
   line-height: .4;
+  max-width: 180px;
+  min-height: 50px;
   padding: 15px 40px;
   text-decoration: none;
-  width: 210px;
 
   img {
     margin-left: -5px;
