implement new homepage

--- a/app/styles/layout/l-homepage.scss
+++ b/app/styles/layout/l-homepage.scss
@@ -1,13 +1,14 @@
-/*HOME PAGE*/
 @import '../settings';
 
 .infomap {
   align-items: center;
   background-color: $color-8;
+  //No delete, here will be an image background
+  //background-repeat: no-repeat;
+  //background-size: cover;
   display: flex;
   font-family: $font-family-1;
   height: 748px;
-  padding-left: 110px;
 }
 
 .success-story {
