--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -59,3 +59,25 @@ p {
     margin-top: 15px;
   }
 }
+
+a {
+  text-decoration: none;
+
+  &.-underline {
+    color: $color-12;
+    font-weight: $font-weight-bold;
+    position: relative;
+
+    &::after {
+      background-color: $color-6;
+      bottom: 0;
+      content: '';
+      display: inline-block;
+      height: 1px;
+      left: 0;
+      position: absolute;
+      right: 0;
+      top: auto;
+    }
+  }
+}
