update info-web styles

--- a/app/styles/components/c-info-web.scss
+++ b/app/styles/components/c-info-web.scss
@@ -12,11 +12,12 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 355px;
-    width: 520px;
+    width: 50%;
   }
 
   .text-info-web {
     margin-left: 110px;
     max-width: 430px;
+    width: 50%;
   }
 }
