--- a/app/styles/components/c-partner-section.scss
+++ b/app/styles/components/c-partner-section.scss
@@ -4,6 +4,20 @@
   padding-bottom: 90px;
   padding-top: 80px;
 
+  .link-underline {
+    color: $color-12;
+    display: inline-block;
+    font-weight: $font-weight-bold;
+    text-decoration: none;
+
+    &::after {
+      background-color: $color-6;
+      content: ' ';
+      display: block;
+      height: 1px;
+    }
+  }
+
   .contain-img-logo {
     align-items: center;
     display: flex;
