--- a/app/styles/components/shared/c-footer-mini.scss
+++ b/app/styles/components/shared/c-footer-mini.scss
@@ -8,13 +8,10 @@
   justify-content: space-between;
   padding: 0 20px;
 
-  > .partners {
-    list-style: none;
-
-    li {
-      display: inline-block;
-      margin-right: 15px;
-    }
+  .partner {
+    height: 22px;
+    margin-right: 15px;
+    opacity: .5;
   }
 
   > .links {
