Reduce blog detail page header subtitle font size

--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -108,7 +108,7 @@
 
   .cover-sub-subtitle {
     color: $color-4;
-    font-size: $font-size-huge;
+    font-size: $font-size-xxx-big;
     font-weight: $font-weight-bold;
     letter-spacing: -1.5px;
     line-height: 1.12;
